--- a/GPSMaui/MainPage.xaml
+++ b/GPSMaui/MainPage.xaml
@@ -8,21 +8,28 @@
               Padding="{OnPlatform iOS='30,60,30,30', Default='30'}">
 
             <Label 
-                Text="Hello, World!"
+                Text="Location tracker"
                 Grid.Row="0"
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="32"
                 HorizontalOptions="Center" />
             <Button 
-                Text="Click me"
+                Text="Start"
                 FontAttributes="Bold"
-                Grid.Row="3"
-                SemanticProperties.Hint="Retrieves the current location"
-                Clicked="OnClicked"
+                Grid.Row="1"
+                SemanticProperties.Hint="Starts location service"
+                Clicked="OnClickedStart"
+                HorizontalOptions="Center" />
+            <Button 
+                Text="Stop"
+                FontAttributes="Bold"
+                Grid.Row="2"
+                SemanticProperties.Hint="Stops location service"
+                Clicked="OnClickedStop"
                 HorizontalOptions="Center" />
             <Label
                 x:Name="Geolocation"
-                Grid.Row="2"
+                Grid.Row="3"
                 FontSize="18"
                 HorizontalOptions="Center"/>
 
